Prueba segundo commit

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "easyweb",
   "version": "1.0.0",
-  "description": "",
+  "description": "Proyecto DAW",
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
